<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Write a Review"-->
<!--        android:textSize="28dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.07"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.942" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="42dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="186dp"
            android:layout_height="171dp"
            android:contentDescription="@string/upper"


            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="35dp"
            android:fontFamily="cursive"
            android:text="@string/upper_yosemite_falls_trail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/level"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="230dp"
            android:layout_marginTop="100dp"
            android:background="@color/cardview_dark_background"
            android:text="@string/hard"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="168dp"
            android:text="@string/length_7_6_mi_est_4h_30m"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>



        <EditText
            android:id="@+id/review"
            android:layout_width="577dp"
            android:layout_height="74dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Write a review for this trail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:onClick="savereview"
            app:layout_constraintTop_toBottomOf="@id/review"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Save"
            android:textSize="15dp"
            tools:ignore="NotSibling" />
<!--    <ListView-->
<!--        android:id="@+id/reviewlists"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/button3"-->
<!--        app:layout_constraintVertical_bias="0.0">-->
<!--    </ListView>-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRecyclerView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="450dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

