<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homelayout"
    tools:context=".HomePage">
    <!--    android:background="@drawable/np"-->


    <EditText
        android:id="@+id/inputlocation"
        android:layout_width="225dp"
        android:layout_height="44dp"
        android:layout_marginTop="155dp"
        android:autofillHints=""

        android:foregroundTint="#B81616"
        android:hint="@string/enter_a_location"
        android:hyphenationFrequency="none"
        android:inputType="textPersonName"
        android:paddingTop="0pt"
        android:textColorHint="#0C848F"
        android:textSize="25sp"
        android:textStyle="italic"
        android:visibility="visible"
        android:drawableLeft="@drawable/ic_baseline_search_24"

       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/buttonsearch"
        android:onClick="onSearch"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="#040510"
        android:textColorHint="#050404"
        android:textFontWeight="15"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/find_your_next_favourite_trail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/yourliking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="286dp"
android:textColor="@color/black"
        android:text="Your Favorites"
        android:textSize="25dp"
        android:textStyle="italic" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipgroup"
        style="@style/Widget.MaterialComponents.ChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="267dp"
        app:chipSpacingHorizontal="10dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/bottom_navigation"
       app:itemBackground="@color/teal_700"
       app:itemTextColor="@drawable/selector"
       app:itemIconTint="@drawable/selector"
       app:menu="@menu/drawer_view"
       android:layout_alignParentBottom="true"
       app:labelVisibilityMode="labeled"/>

</RelativeLayout>
